fix carousel slide

--- a/src/assets/css/pages/_welcome.scss
+++ b/src/assets/css/pages/_welcome.scss
@@ -1,6 +1,7 @@
 .welcome-container {
     border-radius: 1rem;
-    box-shadow: 0 0 30px $mainLightColor, 0 0 40px $mainDarkColor, 0 0 20px $warningColor;
+    box-shadow: 2px -3px 10px $mainLightColor, 0 0 15px $mainDarkColor, -2px 3px 20px $mainLightColor;
+
     padding: 3rem 0;
     background-color: white;
     margin-top: 5rem;
