--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -19,6 +19,7 @@
 @import './pages/systemMessage.scss';
 @import './pages/userprofile.scss';
 @import './pages/changePass';
+@import './pages/_headerInbox';
 
 /*variables*/
 
