--- a/src/assets/css/components/_header.scss
+++ b/src/assets/css/components/_header.scss
@@ -1,17 +1,7 @@
 @import "../variables/variables";
-.bg {
-    background-color: $mainPurpleColor;
-    color: $mainLightColor;
-    text-align: center;
-    z-index: 10;
-}
-.bg:hover .card__header {
-    background-color: $blockHoverColor;
-    color: $mainDarkColor;
-}
+
 .header:hover {
     background-color: $hoverPurpleColor;
-    height: 100%;
     color: aliceblue;
 }
 .header {
@@ -21,27 +11,36 @@
 }
 .header__active {
     color: aliceblue;
-    height: 100%;
     background-color: $hoverPurpleColor;
     min-height: 40px;
 }
 .navbar {
-    padding: 0;
     height: 10vh;
     min-height: 70px;
+    background-color: $mainPurpleColor;
+    min-width: 30rem;
 }
 .dropdown {
     position: relative;
-    .dropdown-menu {    
+    .dropdown-menu {
         left: -3rem;
         flex-direction: column;
         position: absolute;
         cursor: pointer;
-
     }
+}
+.header-nav {
+    display: flex;
 }
 
 .header-left {
-    width: 90vw;
+    display: flex;
+    min-width: 20rem;
+    flex: 8;
+    &__link {
+        width: 20rem;
+    }
 }
-
+.header-right {
+    flex: 1;
+}
