fix reducer friend requests

--- a/src/assets/css/pages/_home.scss
+++ b/src/assets/css/pages/_home.scss
@@ -102,7 +102,7 @@
     height: 90vh;
     display: flex;
     flex-direction: column;
-    width: 72.5rem;
+    flex: 8;
     border-right: thin solid #dddddd;
 }
 
