--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -24,6 +24,7 @@
 @import './pages/_headerInbox';
 @import './pages/inboxSideBar';
 @import './pages/createRoomWithMems';
+@import './pages/addFriends';
 
 
 
