--- a/src/assets/css/base/_base.scss
+++ b/src/assets/css/base/_base.scss
@@ -74,8 +74,7 @@ a {
     box-shadow: 0 0 5px $mainLightColor;
 }
 
-@media screen and(max-width: $lg) {
-    #carouselExampleCaptions {
-        height: 55vh;
-    }
+
+.introducing-text {
+    margin: 0 2rem;
 }
