--- a/src/assets/css/components/_homeResponsive.scss
+++ b/src/assets/css/components/_homeResponsive.scss
@@ -1,13 +1,23 @@
 @media only screen and(min-width: $md) {
+}
+
+@media only screen and(min-width: $lg) {
     .introducing-text {
         width: 75%;
     }
 }
 
-@media only screen and(min-width: $lg) {
+@media only screen and(min-width: $xl) {
     .introducing-text {
-        width: 100%;
+        width: 50%;
     }
+}
+
+@media screen and(max-width: $lg) {
+    #carouselExampleCaptions {
+        height: 55vh;
+    }
+   
 }
 
 @media only screen and(max-width: $md) {
@@ -22,4 +32,8 @@
     .info-room-right {
         display: none;
     }
+}
+
+.carousel-inner-custom {
+    height: 100%;
 }
