--- a/src/assets/css/base/_base.scss
+++ b/src/assets/css/base/_base.scss
@@ -1,10 +1,14 @@
 @import "../variables/variables";
 
 html,
-body,
-.App {
+body{
     width: 100%;
     height: 100%;
+    overflow: hidden;
+}
+.App {
+    width: 100%;
+    height: 100vh;
     overflow: hidden;
 }
 
@@ -19,7 +23,6 @@ body,
 html {
     font-size: 62.5%;
     line-height: 1;
-    overflow: hidden;
 }
 
 body {
