--- a/src/assets/css/base/_base.scss
+++ b/src/assets/css/base/_base.scss
@@ -81,3 +81,10 @@ a {
 .introducing-text {
     margin: 0 2rem;
 }
+
+.image-expression {
+    width: 2rem;
+    height: 2rem;
+    border-radius: 100%;
+    margin: 0.2rem;
+}
