--- a/src/assets/css/components/_reaction.scss
+++ b/src/assets/css/components/_reaction.scss
@@ -1,12 +1,11 @@
 .single-reaction-container {
     display: flex;
     padding: 0.5rem 1rem;
+
     &__icon {
-        color: $mainLightColor;
-        padding: 0.5rem;
-        margin-right: 0.5rem;
+        margin: 0 0.5rem;
         transform: scale(1);
-        transition: 0.2s;
+        transition: 0.2s ease all;
         &:hover {
             transform: scale(1.4);
         }
@@ -23,7 +22,4 @@
     border-radius: 50rem;
     padding: 0.5rem 2rem;
 
-    & i {
-        margin-right: 1rem;
-    }
 }
