--- a/src/assets/css/pages/_home.scss
+++ b/src/assets/css/pages/_home.scss
@@ -260,8 +260,8 @@
                 position: absolute;
                 bottom: 0;
                 border-radius: 10rem;
-                background-color: $mainPurpleColor;
-                box-shadow: 0 0 5px black;
+                background-color: $mainLightColor;
+                box-shadow: 0 0 30px #dddddd;
                 transition: 0.2s;
                 display: none;
                 cursor: pointer;
