--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -71,6 +71,13 @@ a {
   margin: 0 2rem;
 }
 
+.image-expression {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 100%;
+  margin: 0.2rem;
+}
+
 /*components*/
 .text-title {
   font-weight: bold;
@@ -264,11 +271,9 @@ a {
   padding: 0.5rem 1rem;
 }
 .single-reaction-container__icon {
-  color: #FBFBFB;
-  padding: 0.5rem;
-  margin-right: 0.5rem;
+  margin: 0 0.5rem;
   transform: scale(1);
-  transition: 0.2s;
+  transition: 0.2s ease all;
 }
 .single-reaction-container__icon:hover {
   transform: scale(1.4);
@@ -282,9 +287,6 @@ a {
   width: auto;
   border-radius: 50rem;
   padding: 0.5rem 2rem;
-}
-.current-reactions-expressed i {
-  margin-right: 1rem;
 }
 
 /* responsive */
@@ -592,8 +594,8 @@ a {
   position: absolute;
   bottom: 0;
   border-radius: 10rem;
-  background-color: #5D3B78;
-  box-shadow: 0 0 5px black;
+  background-color: #FBFBFB;
+  box-shadow: 0 0 30px #dddddd;
   transition: 0.2s;
   display: none;
   cursor: pointer;
