--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -537,7 +537,7 @@ a {
 }
 .single-chat-box__message__delete {
   position: absolute;
-  text-shadow: 0 0 5px white;
+  text-shadow: 0 0 1px white, 1px 1px 1px white, -1px -1px 1px white, 1px -1px 1px white, -1px 1px 1px white;
   top: 20%;
   left: -3rem;
   display: none;
