responsive boxchat and inboxs

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -322,6 +322,10 @@ a {
   height: 100%;
 }
 
+.hide-an-element {
+  display: none !important;
+}
+
 /*pages*/
 .welcome-container {
   border-radius: 1rem;
