ui add friend modal and search feature

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -989,7 +989,21 @@ a {
 
 .add-friends-dialog {
   max-width: none;
-  width: 80rem;
+  width: 40%;
+}
+
+.user-searched {
+  box-shadow: 0 0 10px #a8d5e3;
+  border-radius: 5px;
+  width: 60%;
+  padding: 2rem 1rem;
+}
+
+.user-searched-img {
+  width: 10rem;
+  height: 10rem;
+  border-radius: 100%;
+  box-shadow: 0 0 5px #FBFBFB;
 }
 
 /*variables*/
