mems express reactions

--- a/src/assets/css/base/_base.scss
+++ b/src/assets/css/base/_base.scss
@@ -26,19 +26,21 @@ html {
 }
 
 body {
-    background: rgb(251, 251, 251);
-    background: linear-gradient(
-        0,
-        rgba(251, 251, 251, 1) 0%,
-        rgba(240, 229, 249, 1) 20%,
-        rgba(239, 205, 240, 0.7458333675266982) 36%,
-        rgba(240, 132, 179, 0.43771011822697825) 57%,
-        rgba(218, 94, 146, 0.3508753843334209) 73%,
-        rgba(156, 75, 139, 0.34807426388524154) 89%,
-        rgba(93, 59, 120, 0.28925073447347693) 96%
-    );
-    background-attachment: fixed;
+    // background: rgb(251, 251, 251);
+    // background: linear-gradient(
+    //     0,
+    //     rgba(251, 251, 251, 1) 0%,
+    //     rgba(240, 229, 249, 1) 20%,
+    //     rgba(239, 205, 240, 0.7458333675266982) 36%,
+    //     rgba(240, 132, 179, 0.43771011822697825) 57%,
+    //     rgba(218, 94, 146, 0.3508753843334209) 73%,
+    //     rgba(156, 75, 139, 0.34807426388524154) 89%,
+    //     rgba(93, 59, 120, 0.28925073447347693) 96%
+    // );
+    background-image: url("../image/devianart/enchanted_by_craftea_deqadnz-fullview.jpg");
     background-repeat: no-repeat;
+    background-size: cover;
+    backdrop-filter: blur(7px);
 }
 
 a {
