--- a/src/assets/css/components/_reaction.scss
+++ b/src/assets/css/components/_reaction.scss
@@ -22,5 +22,10 @@
     border-radius: 50rem;
     padding: 0.5rem 2rem;
     cursor: pointer;
-
 }
+
+.mems-express-reaction-modal {
+    height: 20rem;
+    overflow-y: scroll;
+}
+
