--- a/src/assets/css/components/_general.scss
+++ b/src/assets/css/components/_general.scss
@@ -53,12 +53,14 @@
           position: absolute;
           width: 100%;
           height: 100%;
-          background-color: $mainLightColor;
+          background-image: url("../image/devianart/enchanted_by_craftea_deqadnz-fullview.jpg");
+          background-repeat: no-repeat;
+          background-size: cover;
+          backdrop-filter: blur(7px);
      }
 
      &__spinner {
-          font-size: 1rem;
-          text-shadow: 0 0 5px black;
+          font-size: 3rem;
           position: absolute;
           top: 50%;
           left: calc(52% - 8rem);
