--- a/src/assets/css/pages/_welcome.scss
+++ b/src/assets/css/pages/_welcome.scss
@@ -4,7 +4,7 @@
         -2px 3px 20px $mainLightColor;
 
     padding: 3rem;
-    background-color: white;
+    background-color: $mainLightColor;
     margin-top: 5rem;
     margin-bottom: 5rem;
     &__image {
