--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -25,10 +25,10 @@ html {
 }
 
 body {
-  background: #fbfbfb;
-  background: linear-gradient(0, #fbfbfb 0%, #f0e5f9 20%, rgba(239, 205, 240, 0.7458333675) 36%, rgba(240, 132, 179, 0.4377101182) 57%, rgba(218, 94, 146, 0.3508753843) 73%, rgba(156, 75, 139, 0.3480742639) 89%, rgba(93, 59, 120, 0.2892507345) 96%);
-  background-attachment: fixed;
+  background-image: url("../image/devianart/enchanted_by_craftea_deqadnz-fullview.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
+  backdrop-filter: blur(7px);
 }
 
 a {
@@ -134,11 +134,13 @@ a {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: #FBFBFB;
+  background-image: url("../image/devianart/enchanted_by_craftea_deqadnz-fullview.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  backdrop-filter: blur(7px);
 }
 .loading__spinner {
-  font-size: 1rem;
-  text-shadow: 0 0 5px black;
+  font-size: 3rem;
   position: absolute;
   top: 50%;
   left: calc(52% - 8rem);
@@ -290,6 +292,11 @@ a {
   cursor: pointer;
 }
 
+.mems-express-reaction-modal {
+  height: 20rem;
+  overflow-y: scroll;
+}
+
 /* responsive */
 @media only screen and (min-width: 992px) {
   .introducing-text {
@@ -332,7 +339,7 @@ a {
   border-radius: 1rem;
   box-shadow: 2px -3px 10px #FBFBFB, 0 0 15px #262626, -2px 3px 20px #FBFBFB;
   padding: 3rem;
-  background-color: white;
+  background-color: #FBFBFB;
   margin-top: 5rem;
   margin-bottom: 5rem;
 }
@@ -360,6 +367,7 @@ a {
 }
 .home {
   display: flex;
+  height: 90vh;
 }
 .home__inbox-list {
   height: 80vh;
