--- a/src/assets/css/pages/_membersInRoom.scss
+++ b/src/assets/css/pages/_membersInRoom.scss
@@ -1,8 +1,22 @@
 .member-in-room {
-
+     position: relative;
+     user-select: none;
      &__img {
           width: 50px;
           height: 50px;
           border-radius: 100%;
+     }
+
+     &__key {
+          position: absolute;
+          right: 2rem;
+          bottom: 0;
+          text-shadow: 0 0 5px black;
+          color: yellow;
+     }
+
+     &__btn {
+          width: 100%;
+          font-size: 1.1rem;
      }
 }
