--- a/src/assets/css/base/_base.scss
+++ b/src/assets/css/base/_base.scss
@@ -70,6 +70,10 @@ a {
 .modal-dialog {
     margin-top: 10rem;
 }
+.members-in-room-dialog {
+    max-width: none;
+    width: 70rem;
+}
 
 .header-img {
     padding: 0 !important;
