send image socket

--- a/src/assets/css/base/_base.scss
+++ b/src/assets/css/base/_base.scss
@@ -80,7 +80,7 @@ a {
     width: 4rem;
     height: 4rem;
     border-radius: 100%;
-    box-shadow: 0 0 5px $mainDarkColor, 0 3px $mainLightColor;
+    box-shadow: 0 0 5px $mainDarkColor;
 }
 
 .introducing-text {
