--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -7,6 +7,7 @@
 @import './components/input';
 @import './components/carousel';
 @import './components/reaction';
+@import './components/media';
 
 /* responsive */
 @import './components/homeResponsive';
@@ -25,7 +26,6 @@
 @import './pages/inboxSideBar';
 @import './pages/createRoomWithMems';
 @import './pages/addFriends';
-
 
 
 /*variables*/
