--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -306,6 +306,10 @@ a {
 .media__img {
   border-radius: 7.5px;
   box-shadow: 0 0 3px #262626;
+  transition: 0.1s;
+}
+.media__img:hover {
+  box-shadow: 0 0 10px black;
 }
 
 /* responsive */
