feature: remove button of imagesSending

--- a/src/assets/css/components/_media.scss
+++ b/src/assets/css/components/_media.scss
@@ -5,7 +5,7 @@
           box-shadow: 0 0 3px $mainDarkColor;
           transition: 0.1s;
           &:hover {
-          box-shadow: 0 0 10px black;
+          box-shadow: 0 0 1x black;
 
           }
      }
