--- a/src/assets/css/pages/_sendMessage.scss
+++ b/src/assets/css/pages/_sendMessage.scss
@@ -44,7 +44,7 @@
         position: relative;
         margin-top: 1rem;
 
-        &__img {
+        &__media {
             margin: 0.75rem 0;
             border-radius: 7.5px;
             box-shadow: 4px 4px 4px $mainDarkColor;
