--- a/src/assets/css/components/_media.scss
+++ b/src/assets/css/components/_media.scss
@@ -1,13 +1,39 @@
 .media {
+    &__img {
+        border-radius: 7.5px;
+        box-shadow: 0 0 3px $mainDarkColor;
+        transition: 0.1s;
+        &:hover {
+            box-shadow: 0 0 1x black;
+        }
+    }
+}
 
-     &__img {
-          border-radius: 7.5px;
-          box-shadow: 0 0 3px $mainDarkColor;
-          transition: 0.1s;
-          &:hover {
-          box-shadow: 0 0 1x black;
+.media-message {
+    padding: 1rem 0;
+    border-bottom: thin solid #dddddd;
 
-          }
-     }
+    &__img {
+        padding: 1rem;
+        width: 10rem;
+        height: 10rem;
+        border-radius: 7.5px;
+        box-shadow: 2px 3px 5px $mainDarkColor;
+    }
 
+    &__file-name {
+        word-wrap: break-word;
+        color: red;
+    }
+
+    &__download {
+        
+        cursor: pointer;
+        text-shadow: 1px 2px 2px $mainLightColor;
+        transform: scale(1);
+        transition: 0.1s;
+        &:hover {
+            transform: scale(1.4);
+        }
+    }
 }
