--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -26,6 +26,7 @@
 @import './pages/inboxSideBar';
 @import './pages/createRoomWithMems';
 @import './pages/addFriends';
+@import './pages/friendProfile.scss';
 
 
 /*variables*/
