register sms step 1 ui

--- a/src/assets/css/base/_base.scss
+++ b/src/assets/css/base/_base.scss
@@ -36,7 +36,8 @@ body {
     //     rgba(156, 75, 139, 0.34807426388524154) 89%,
     //     rgba(93, 59, 120, 0.28925073447347693) 96%
     // );
-    background-image: url("../image/devianart/enchanted_by_craftea_deqadnz-fullview.jpg");
+    background-image: url("../image/main-background.jpg");
+
     background-repeat: no-repeat;
     background-size: cover;
     backdrop-filter: blur(7px);
