--- a/src/assets/css/components/_general.scss
+++ b/src/assets/css/components/_general.scss
@@ -53,7 +53,7 @@
           position: absolute;
           width: 100%;
           height: 100%;
-          background-image: url("../image/devianart/enchanted_by_craftea_deqadnz-fullview.jpg");
+          background-image: url("../image/main-background.jpg");
           background-repeat: no-repeat;
           background-size: cover;
           backdrop-filter: blur(7px);
