--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -25,7 +25,7 @@ html {
 }
 
 body {
-  background-image: url("../image/devianart/enchanted_by_craftea_deqadnz-fullview.jpg");
+  background-image: url("../image/main-background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   backdrop-filter: blur(7px);
@@ -140,7 +140,7 @@ a {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url("../image/devianart/enchanted_by_craftea_deqadnz-fullview.jpg");
+  background-image: url("../image/main-background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   backdrop-filter: blur(7px);
