--- a/src/assets/css/components/_media.scss
+++ b/src/assets/css/components/_media.scss
@@ -37,3 +37,16 @@
         }
     }
 }
+
+
+.media-store {
+    margin-top: 1rem;
+    margin-left: 1.5rem;
+    display: flex;
+    flex-direction: column;
+
+    &__title {
+        color: $warningColor;
+        user-select: none;
+    }
+}
