--- a/src/assets/css/components/_media.scss
+++ b/src/assets/css/components/_media.scss
@@ -54,7 +54,8 @@
 
         &__modal-image {
             height: 10rem;
-            width: 100%;
+            width: 100% ;
+            cursor: pointer;
             box-shadow: 0 0 3px $mainDarkColor;
             border-radius: 7.5px;
             transition: 0.1s;
